# deus-ex-set

./: CMakeLists.txt  CMakeSettings.json  README.md
assets/shaders/: test.fs
src/: log.hpp  main.cpp
src/components/: colliders.hpp
src/entities/: entity.cpp  entity.hpp  object.hpp
src/entities/bullet/: bullet.cpp  bullet.hpp  bulletManager.cpp  bulletManager.hpp
src/entities/enemies/: enemy.cpp  enemy.hpp
src/entities/player/: player.cpp  player.hpp  playerP.cpp  playerP.hpp  playerS.cpp  playerS.hpp  playerType.hpp
src/graphics/: draw.cpp  draw.hpp  sprite.cpp  sprite.hpp  spriteManager.cpp  spriteManager.hpp
src/scenes/: baseLevel.cpp  baseLevel.hpp  baseScene.cpp  baseScene.hpp  currentScene.hpp  sceneManager.hpp
src/scenes/gameScenes/: menu.cpp  menu.hpp
src/space/: space.hpp
src/vec/: vec.hpp
src/window/: window.cpp  window.h  window.hpp
